<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.flickit</groupId>
        <artifactId>flickit-assessment</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>flickit-assessment-core</artifactId>
  <properties>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

    <dependencies>
        <dependency>
            <groupId>org.flickit</groupId>
            <artifactId>flickit-assessment-data</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flickit</groupId>
            <artifactId>flickit-assessment-common</artifactId>
        </dependency>
    </dependencies>

</project>
